# aricc

./: .gitignore  CHANGELOG.md  README.md  aricc.cabal  out
app/: Generation.hs  Lexer.hs  Main.hs  Parser.hs
test/: Main.hs  addition.c  and_false.c  and_true.c  arithmetic_prec.c  associativity.c  associativity.s  div.c  div.s  eq_false.c  eq_true.c  le_false.c  le_true.c  log_prec1.c  log_prec3.c  log_prec4.c  lt_false.c  lt_true.c  missing_semicolon.c  neg.c  neg.s  neg_comp.c  neg_comp.s  or_false.c  or_true.c  precedence.s  return_2.s  sub.c  sub.s  subtraction.c  unop_parens.c  unop_parens.s
test/compiler/: and_or_precedence.c  assign_add.c  assign_and.c  assign_divide.c  assign_lshift.c  assign_modulo.c  assign_or.c  assign_rshift.c  assign_subtract.c  assign_xor.c  bitwise_and.c  bitwise_or.c  bitwise_shift.c  bitwise_xor.c
