cabal-version: 3.0
name: aricc
version: 0.1.0.0
-- synopsis:
-- description:
license: BSD-3-Clause
license-file: LICENSE
author: Lqnk4
maintainer: internalbeast109@gmail.com
-- copyright:
build-type: Simple
extra-doc-files: CHANGELOG.md

-- extra-source-files:
common warnings
  ghc-options: -Wall

executable aricc
  import: warnings
  main-is: Main.hs
  other-modules:
    Lexer
    Parser
    Generation

  -- other-extensions:
  build-depends:
    filepath ^>=1.4.301.0,
    mtl ^>=2.3.1,
    containers ^>=0.6.7,
    base ^>=4.18.3.0,
    megaparsec ^>=9.7.0,
    text ^>=2.0.2,
    filepath ^>=1.4.301.0,

  hs-source-dirs: app
  default-language: Haskell2010
  default-extensions: OverloadedStrings,
                      LambdaCase,
                      TypeFamilies,
                      RecordWildCards,
                      GADTs
